[package]
name = "mercury-client-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json", "socks"] }
tokio = { version = "1.27.0", features = ["full"] }
# bdk = { version = "0.28.0", default-feature = false, features = ["all-keys", "key-value-db",  "rpc"] }
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
schemars = { version = "0.8.12", features = ["chrono", "uuid"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[dependencies.kms]
# git = "https://github.com/commerceblock/kms-secp256k1"
# tag = "v0.1.14"
path = "../comm-kms-secp256k1"
default-features = false

[dependencies.multi-party-ecdsa]
# git = "https://github.com/commerceblock/multi-party-ecdsa"
# tag = "v0.3.12"
path = "../comm-multi-party-ecdsa"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
tag = "v0.2.8"
# path = "../comm-curv"
features =  ["ec_secp256k1"]
